--- a/Trial/app/views/forums/list.html.erb
+++ b/Trial/app/views/forums/list.html.erb
@@ -11,6 +11,13 @@
       <div class="inner"><%= button_to 'Destroy', [forum.user, forum], method: :delete, data: { confirm: 'Are you sure?' } %></div>
       <br>
       <p>Owner: <%= getType(forum.user) %><%= link_to forum.user.vname, user_path(forum.user) %></p>
+      <p>Status: <%= getStatus(forum.user) %>
+         <% if getStatus(forum.user) != "Online" %>
+            <% if getTime(forum.user) %>
+               for <%= distance_of_time_in_words_to_now getTime(forum.user) %>
+            <% end %>
+         <% end %>
+      </p>
       <p><%= forum.description %></p>
    </div>
    <br>
