--- a/Trial/app/views/blogs/edit.html.erb
+++ b/Trial/app/views/blogs/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing blog</h1>
-
+<% provide(:title, "Blog: Edit your blog here!") %>
+<% provide(:description, "Allows the users to change their blog to the best of their abilities.") %>
+<h1 class="pagetextheader">Editing blog</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @blog %> |
-<%= link_to 'Back', blogs_path %>
+<p class="pagetext"><%= link_to 'Back', user_blog_path(@blog.user, @blog) %></p>
