--- a/Trial/app/views/blogs/new.html.erb
+++ b/Trial/app/views/blogs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New blog</h1>
-
+<% provide(:title, "Blog: Create new blogs here!") %>
+<% provide(:description, "Where new blogs are born from the users wild imagination.") %>
+<h1 class="pagetextheader">New blog</h1>
 <%= render 'form' %>
-
-<%= link_to 'Back', blogs_path %>
+<p class="pagetext"><%= link_to 'Back', user_path(current_user) %></p>
