--- a/Trial/app/views/forums/index.html.erb
+++ b/Trial/app/views/forums/index.html.erb
@@ -16,5 +16,12 @@
    <p class="pagetext"><%= forum.description %></p>
    <% if !getOptional %>
       <p class="pagetext"><%= getType(forum.user) %><%= link_to forum.user.vname, user_path(forum.user) %></p>
+      <p class="pagetext">Status: <%= getStatus(forum.user) %>
+         <% if getStatus(forum.user) != "Online" %>
+            <% if getTime(forum.user) %>
+               for <%= distance_of_time_in_words_to_now getTime(forum.user) %>
+            <% end %>
+         <% end %>
+      </p>
    <% end %>
 <% end %>
