--- a/Trial/app/views/forums/show.html.erb
+++ b/Trial/app/views/forums/show.html.erb
@@ -29,6 +29,14 @@
                      <% tcontainer.maintopics.each do |maintopic| %>
                         <p><%= link_to maintopic.topicname, tcontainer_maintopic_path(tcontainer, maintopic) %></p>
                         <p><%= maintopic.description %></p>
+                        <p>By: <%= link_to maintopic.user.vname, user_path(maintopic.user) %></p>
+                        <p>Status: <%= getStatus(maintopic.user) %>
+                           <% if getStatus(maintopic.user) != "Online" %>
+                              <% if getTime(maintopic.user) %>
+                                 for <%= distance_of_time_in_words_to_now getTime(maintopic.user) %>
+                              <% end %>
+                           <% end %>
+                        </p>
                         <br>
                      <% end %>
                   </div>
