--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -11,6 +11,9 @@
    <% else %>
       <%= link_to "Suggestions", new_suggestion_path %>
       <%= link_to "Shop", items_path %>
+   <% end %>
+   <%= link_to "News", blogs_path %>
+   <% if current_user %>
       <%= link_to "My Inventory", user_inventories_path(current_user.vname) %>
       <%= link_to "Fight Monsters", pets_monsters_path %>
    <% end %>
@@ -19,7 +22,7 @@
    <% else %>
       <%= link_to "Forum", forums_path %>
    <% end %>
-   <%= link_to "Series", sbooks_path %>
+   <%= link_to "Stories", sbooks_path %>
    <%= link_to "Gallery", mainfolders_path %>
 </div>
 <%= timeleft %>
