--- a/Trial/app/views/maintopics/index.html.erb
+++ b/Trial/app/views/maintopics/index.html.erb
@@ -14,5 +14,12 @@
       <% end %>
       <p>by: <%= getType(maintopic.user) %><%= link_to maintopic.user.vname, user_path(maintopic.user) %></p>
       <pre class="storyformat"><%= maintopic.description %></pre>
+      <p>Status: <%= getStatus(forum.user) %>
+         <% if getStatus(forum.user) != "Online" %>
+            <% if getTime(forum.user) %>
+               for <%= distance_of_time_in_words_to_now getTime(forum.user) %>
+            <% end %>
+         <% end %>
+      </p>
    </div>
 <% end %>
