--- a/Trial/app/views/subtopics/index.html.erb
+++ b/Trial/app/views/subtopics/index.html.erb
@@ -11,6 +11,13 @@
       <div class="inner"><%= button_to 'Edit', edit_maintopic_subtopic_path(subtopic.maintopic, subtopic), method: :get %></div>
       <div class="inner"><%= button_to 'Destroy', [subtopic.maintopic, subtopic], method: :delete, data: { confirm: 'Are you sure?' } %></div>
       <p>by: <%= getType(subtopic.user) %><%= link_to subtopic.user.vname, user_path(subtopic.user) %></p>
+      <p>Status: <%= getStatus(subtopic.user) %>
+         <% if getStatus(subtopic.user) != "Online" %>
+            <% if getTime(subtopic.user) %>
+               for <%= distance_of_time_in_words_to_now getTime(subtopic.user) %>
+            <% end %>
+         <% end %>
+      </p>
       <pre class="storyformat"><%= subtopic.description %></pre>
    </div>
 <% end %>
