--- a/Trial/app/views/users/_userinfo.html.erb
+++ b/Trial/app/views/users/_userinfo.html.erb
@@ -11,5 +11,11 @@
    <% if current_user && (current_user.id == @user.id || current_user.admin?) %>
       <p>Money: <%= @pouch.amount %></p>
    <% end %>
-   <p>Status: <%= getStatus(@user) %></p>
+   <p>Status: <%= getStatus(@user) %>
+      <% if getStatus(@user) != "Online" %>
+         <% if getTime(@user) %>
+            for <%= distance_of_time_in_words_to_now getTime(@user) %>
+         <% end %>
+      <% end %>
+   </p>
 </div>
