--- a/Trial/app/views/users/edit.html.erb
+++ b/Trial/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "User: Edit your account here!") %>
 <% provide(:description, "Allows the users to change their account settings to the best of their abilities.") %>
 <h1 class="pagetextheader">Editing user</h1>
-<%= render 'form' %>
+<%= render 'form', , object: "Edit" %>
 <p class="pagetext"><%= link_to 'Back', @user %></p>
