--- a/Trial/app/views/users/new.html.erb
+++ b/Trial/app/views/users/new.html.erb
@@ -2,5 +2,5 @@
 <% provide(:keywords, "create, virtual, pet, account, today") %>
 <% provide(:description, "Where the user can create their free virtual pet account on Duelingpets.net.") %>
 <h1 class="pagetextheader">New user</h1>
-<%= render 'form' %>
+<%= render 'form', object: "New" %>
 <p class="pagetext"><%= link_to 'Back', root_path %></p>
