--- a/Trial/app/views/users/show.html.erb
+++ b/Trial/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
    <% if current_user && current_user.id == @user.id %>
       <div class="inner"><%= button_to 'Edit', edit_user_path(@user), method: :get %></div>
    <% end %>
-   <p><%= image_tag getAvatar(@user) %></p>
+   <p><%= image_tag @user.avatar_url(:thumb).to_s %></p>
 </div>
 <%= render 'userinfo' %>
 <br>
@@ -20,6 +20,18 @@
    <p class="pagetext">Pets</p>
    <p class="pagetext"><%= link_to 'My pets', user_petowners_path(@user) %></p>
 <% end %>
+<% if @bcount > 0 || (current_user && current_user.id == @user.id) %>
+   <br>
+   <p class="pagetext">Blog</p>
+<% end %>
+<div class="pagetext">
+   <% if @bcount > 0 %>
+      <div class="inner"><%= link_to 'My Blogs', user_blogs_path(@user) %></div>
+   <% end %>
+   <% if current_user && current_user.id == @user.id %>
+      <div class="inner"><%= link_to 'New Blog', new_user_blog_path(@user) %></div>
+   <% end %>
+</div>
 <!--Forum section-->
 <% if @fcount > 0 || (current_user && current_user.id == @user.id) %>
    <br>
@@ -74,6 +86,13 @@
                <div class="inner"><%= button_to "Delete", [@user, comment], :confirm => "Are you sure?", :method => :delete %></div>
             <% end %>
             <pre class="storyformat"><%= comment.message %></pre>
+            <p>Status: <%= getStatus(comment.from_user) %>
+               <% if getStatus(comment.from_user) != "Online" %>
+                  <% if getTime(comment.from_user) %>
+                     for <%= distance_of_time_in_words_to_now getTime(comment.from_user) %>
+                  <% end %>
+               <% end %>
+            </p>
          </div>
       <% end %>
       <br>
