--- a/Trial/app/views/pms/new.html.erb
+++ b/Trial/app/views/pms/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New pm</h1>
-
+<% provide(:title, "PM: Create new pms here!") %>
+<% provide(:description, "Where new pms are born from the users wild imagination.") %>
+<h1 class="pagetextheader">New pm</h1>
 <%= render 'form' %>
-
-<%= link_to 'Back', pms_path %>
+<p class="pagetext"><%= link_to 'Back', user_path(current_user) %></p>
