--- a/Trial/app/views/preplies/_form.html.erb
+++ b/Trial/app/views/preplies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@preply) do |f| %>
+<%= form_for([@pm, @preply]) do |f| %>
   <% if @preply.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@preply.errors.count, "error") %> prohibited this preply from being saved:</h2>
@@ -10,28 +10,13 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <br>
+  <div class="pagetext">
     <%= f.label :message %><br />
     <%= f.text_area :message %>
   </div>
-  <div class="field">
-    <%= f.label :created_on %><br />
-    <%= f.datetime_select :created_on %>
-  </div>
-  <div class="field">
-    <%= f.label :pm_id %><br />
-    <%= f.number_field :pm_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :maintenance %><br />
-    <%= f.check_box :maintenance %>
-  </div>
-  <div class="actions">
+  <div class="pagetext">
     <%= f.submit %>
   </div>
+  <br>
 <% end %>
