--- a/Trial/app/views/preplies/new.html.erb
+++ b/Trial/app/views/preplies/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New preply</h1>
-
+<% provide(:title, "PReply: Create new preplies here!") %>
+<% provide(:description, "Where new preplies are born from the users wild imagination.") %>
+<h1 class="pagetextheader">New preply</h1>
 <%= render 'form' %>
-
-<%= link_to 'Back', preplies_path %>
+<p class="pagetext"><%= link_to 'Back', user_pm_path(@pm.from_user, @pm) %></p>
