Fixing a bug in onlineusers

--- a/Trial/app/views/onlineusers/index.html.erb
+++ b/Trial/app/views/onlineusers/index.html.erb
@@ -13,9 +13,9 @@
       <% @onlineusers.each do |onlineuser| %>
          <tr>
             <td><%= link_to onlineuser.user.vname, onlineuser.user %>&nbsp;&nbsp;</td>
-            <td><%= getStatus(onlineuser) %>
-                <% if getStatus(onlineuser) != "Online" %>
-                   <% if getTime(onlineuser) %>
+            <td><%= getStatus(onlineuser.user) %>
+                <% if getStatus(onlineuser.user) != "Online" %>
+                   <% if getTime(onlineuser.user) %>
                       <%= distance_of_time_in_words_to_now getTime(onlineuser) %> ago
                    <% end %>
                 <% end %>
