--- a/Trial/app/views/accountkeys/new.html.erb
+++ b/Trial/app/views/accountkeys/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New accountkey</h1>
-
+<h1 class="pagetextheader">New accountkey</h1>
 <%= render 'form' %>
-
-<%= link_to 'Back', accountkeys_path %>
+<p class="pagetext"><%= link_to 'Back', accountkeys_path %></p>
