--- a/Trial/app/views/user_mailer/welcome_email.txt.erb
+++ b/Trial/app/views/user_mailer/welcome_email.txt.erb
@@ -10,6 +10,11 @@ be happy to greet you and welcome you with open arms.
 
 You have successfully signed up to Duelingpets.net,
 your login id is: <%= @user.login_id %>.
+
+In order to activate your account for the first time
+please be sure to use this token: <%= @accounttoken %>
+in the Verify link below the login screen. Once you
+have activated your account you may login normally.
  
 To login to the site, just follow this link: <%= @url %>.
  
