--- a/Trial/app/views/user_mailer/welcome_email.html.erb
+++ b/Trial/app/views/user_mailer/welcome_email.html.erb
@@ -18,6 +18,12 @@
       your login id is: <%= @user.login_id %>.<br>
     </p>
     <p>
+      In order to activate your account for the first time
+      please be sure to use this token: <%= @accounttoken %>
+      in the Verify link below the login screen. Once you
+      have activated your account you may login normally.
+    </p>
+    <p>
       To login to the site, just follow this link: <%= @url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
