Added the item files to github

--- a/Trial/app/views/items/index.html.erb
+++ b/Trial/app/views/items/index.html.erb
@@ -21,6 +21,6 @@
 <% end %>
 <br>
 <!--Prevents a visting user from creating a pet if not logged in -->
-<% if !current_user.nil? && current_user.admin %>
+<% if !current_user.nil? %>
    <p class="pagetext"><%= link_to 'New Item', new_item_path %></p>
 <% end %>
