--- a/Trial/app/views/pet_mailer/pet_approved.txt.erb
+++ b/Trial/app/views/pet_mailer/pet_approved.txt.erb
@@ -1,4 +1,4 @@
-Your chapter <%= @pet.species_name %> was successfully added.
+Your pet <%= @pet.species_name %> was successfully added.
 ===============================================
  
 Way to go <%= @pet.user.vname %> the creator
