--- a/Trial/app/views/pet_mailer/review_pet.txt.erb
+++ b/Trial/app/views/pet_mailer/review_pet.txt.erb
@@ -13,7 +13,7 @@ have their pet featured here then please click the
 approve button on the review section. An accept not
 only gives the user some gratitude but also gives
 the user some points to continue their wonderful
-story.
+pet creations.
  
 If you feel that the creator's pet is just not up
 to snuff yet or features inappropriate content
