--- a/Trial/app/views/items/_iteminfo.html.erb
+++ b/Trial/app/views/items/_iteminfo.html.erb
@@ -27,6 +27,8 @@
                </tr>
             </table>
          </div>
+         <p>Created_on: <%= item.created_on.strftime("%B-%d-%Y") %></p>
+         <p>Creator: <%= item.user.vname %></p>
       </div>
       <% if ((index + 1)%3) == 0 %>         
          <br>
