--- a/Trial/app/views/items/show.html.erb
+++ b/Trial/app/views/items/show.html.erb
@@ -6,7 +6,7 @@
    <div class="inner">Name: <%= @item.name %></div>
    <div class="inner">
       <% if current_user %>
-         <% if current_user.id == @pet.user_id || current_user.admin %>
+         <% if current_user.id == @item.user_id || current_user.admin %>
             <%= button_to 'Edit', edit_item_path(@item), method: :get %>
          <% end %>
       <% end %>
