--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="backgroundbox"><%= image_tag("../../../abie2.png", class: "forestbackground") %></div>
+<div class="backgroundbox"><%= image_tag("/banner/duelingpetsbanner.jpeg", class: "forestbackground") %><%#= image_tag("../../../abie2.png", class: "forestbackground") %></div>
 <div class="logo">DuelingPets.net</div>
 <div class="profilebar"><%= profile %></div>
 <br>
