--- a/Trial/app/views/items/_iteminfo.html.erb
+++ b/Trial/app/views/items/_iteminfo.html.erb
@@ -28,7 +28,7 @@
             </table>
          </div>
          <p>Created_on: <%= item.created_on.strftime("%B-%d-%Y") %></p>
-         <p>Creator: <%= item.user.vname %></p>
+         <p>Creator: <%= getType(item.user) %><%= link_to item.user.vname, user_path(item.user) %></p>
       </div>
       <% if ((index + 1)%3) == 0 %>         
          <br>
