Updated the homepage and nav bar

--- a/Trial/app/views/start/home.html.erb
+++ b/Trial/app/views/start/home.html.erb
@@ -36,4 +36,4 @@
    <!--End indent-->
 <% end %>
 <br>
-<div class="mascotbox"><%= image_tag("../../../mainimage.jpeg", class: "mascot") %></div>
+<div class="mascotbox"><%= image_tag("/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
