--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -1,28 +1,30 @@
-<div class="backgroundbox"><%= image_tag("/banner/duelingpetsbanner.jpeg", class: "forestbackground") %><%#= image_tag("../../../abie2.png", class: "forestbackground") %></div>
+<div class="backgroundbox"><%= image_tag("/banner/duelingpetsbanner.jpeg", class: "banner") %></div>
 <div class="logo">DuelingPets.net</div>
 <div class="profilebar"><%= profile %></div>
 <br>
-<div class="navigation">
-   <%= link_to "Home", root_path %>
-   <%= link_to "Adopt a Pet", pets_path %>
-   <% if !current_user %>
-      <%= link_to "Forgot Password", recover_path %>
-      <%= link_to "Forum", forums_path %>
-   <% else %>
-      <%= link_to "Suggestions", new_suggestion_path %>
-      <%= link_to "Shop", items_path %>
-   <% end %>
-   <%= link_to "News", blogs_path %>
-   <% if current_user %>
-      <%= link_to "My Inventory", user_inventories_path(current_user.vname) %>
-      <%= link_to "Fight Monsters", pets_monsters_path %>
-   <% end %>
-   <% if !current_user %>
-      <%= link_to "Shop", items_path %>
-   <% else %>
-      <%= link_to "Forum", forums_path %>
-   <% end %>
-   <%= link_to "Stories", sbooks_path %>
-   <%= link_to "Gallery", mainfolders_path %>
+<div class="navbox">
+   <div class="navigation">
+      <div class="navigationspacing"><%= link_to "Home", root_path %></div>
+      <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div>
+      <% if !current_user %>
+         <div class="navigationspacing"><%= link_to "Forgot Password", recover_path %></div>
+         <div class="navigationspacing"><%= link_to "Forum", forums_path %></div>
+      <% else %>
+         <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div>
+         <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
+      <% end %>
+      <div class="navigationspacing"><%= link_to "News", blogs_path %></div>
+      <% if current_user %>
+         <div class="navigationspacing"><%= link_to "My Inventory", user_inventories_path(current_user.vname) %></div>
+         <div class="navigationspacing"><%= link_to "Fight Monsters", pets_monsters_path %></div>
+      <% end %>
+      <% if !current_user %>
+         <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
+      <% else %>
+         <div class="navigationspacing"><%= link_to "Forum", forums_path %></div>
+      <% end %>
+      <div class="navigationspacing"><%= link_to "Stories", sbooks_path %></div>
+      <div class="navigationspacing"><%= link_to "Gallery", mainfolders_path %></div>
+   </div>
 </div>
 <%= timeleft %>
