--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 <br>
 <div class="navbox">
    <div class="navigation">
-      <div class="navigationspacing"><%#= link_to "Home", root_path %></div>
+      <div class="navigationspacing"><%= link_to "Home", root_path %></div>
       <div class="navigationspacing"><%#= link_to "Adopt a Pet", pets_path %></div>
       <% if !current_user %>
          <div class="navigationspacing"><%#= link_to "Forgot Password", recover_path %></div>
