--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <div class="navigationspacing"><%= link_to "Home", root_path %></div>
       <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div>
       <% if !current_user %>
-         <div class="navigationspacing"><%#= link_to "Forgot Password", recover_path %></div>
+         <div class="navigationspacing"><%= link_to "Forgot Password", recover_path %></div>
          <div class="navigationspacing"><%#= link_to "Forum", forums_path %></div>
       <% else %>
          <div class="navigationspacing"><%#= link_to "Suggestions", new_suggestion_path %></div>
