--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
          <div class="navigationspacing"><%#= link_to "Fight Monsters", pets_monsters_path %></div>
       <% end %>
       <% if !current_user %>
-         <div class="navigationspacing"><%#= link_to "Shop", items_path %></div>
+         <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
       <% else %>
          <div class="navigationspacing"><%#= link_to "Forum", forums_path %></div>
       <% end %>
