--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
       <% else %>
          <div class="navigationspacing"><%#= link_to "Forum", forums_path %></div>
       <% end %>
-      <div class="navigationspacing"><%#= link_to "Stories", sbooks_path %></div>
+      <div class="navigationspacing"><%= link_to "Stories", sbooks_path %></div>
       <div class="navigationspacing"><%#= link_to "Gallery", mainfolders_path %></div>
    </div>
 </div>
