--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -5,12 +5,12 @@
 <div class="navbox">
    <div class="navigation">
       <div class="navigationspacing"><%= link_to "Home", root_path %></div>
-      <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div>
+      <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div><!--Works great for guest at 80% font -->
       <% if !current_user %>
          <div class="navigationspacing"><%= link_to "Forgot Password", recover_path %></div>
          <div class="navigationspacing"><%= link_to "Forum", forums_path %></div>
       <% else %>
-         <div class="navigationspacing"><%#= link_to "Suggestions", new_suggestion_path %></div>
+         <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div>
          <div class="navigationspacing"><%#= link_to "Shop", items_path %></div>
       <% end %>
       <div class="navigationspacing"><%= link_to "News", blogs_path %></div>
