Restoring original behaviour

--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -9,20 +9,19 @@
       <% if !current_user %>
          <div class="navigationspacing"><%= link_to "Forgot Password", recover_path %></div>
          <div class="navigationspacing"><%= link_to "Forum", forums_path %></div>
-         <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div>
       <% else %>
-         <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div>
-         <div class="navigationspacing"><%#= link_to "Shop", items_path %></div>
+         <div class="navigationspacing"><%= link_to "Suggestions", new_suggestion_path %></div><!--Come back to this later-->
+         <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
       <% end %>
       <div class="navigationspacing"><%= link_to "News", blogs_path %></div>
       <% if current_user %>
-         <div class="navigationspacing"><%#= link_to "My Inventory", user_inventories_path(current_user.vname) %></div>
-         <div class="navigationspacing"><%#= link_to "Fight Monsters", pets_monsters_path %></div>
+         <div class="navigationspacing"><%= link_to "My Inventory", user_inventories_path(current_user.vname) %></div>
+         <div class="navigationspacing"><%= link_to "Fight Monsters", pets_monsters_path %></div>
       <% end %>
       <% if !current_user %>
          <div class="navigationspacing"><%= link_to "Shop", items_path %></div>
       <% else %>
-         <div class="navigationspacing"><%#= link_to "Forum", forums_path %></div>
+         <div class="navigationspacing"><%= link_to "Forum", forums_path %></div>
       <% end %>
       <div class="navigationspacing"><%= link_to "Stories", sbooks_path %></div>
       <div class="navigationspacing"><%= link_to "Gallery", mainfolders_path %></div>
