--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -25,6 +25,7 @@
       <% end %>
       <div class="navigationspacing"><%= link_to "Stories", sbooks_path %></div>
       <div class="navigationspacing"><%= link_to "Gallery", mainfolders_path %></div>
+      <div class="navigationspacing"><%= link_to "Radically awesome features" %></div>
    </div>
 </div>
 <%= timeleft %>
