Added the sitemap to github

--- a/Trial/app/views/start/home.html.erb
+++ b/Trial/app/views/start/home.html.erb
@@ -37,3 +37,5 @@
 <% end %>
 <br>
 <div class="mascotbox"><%= image_tag("/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
+<br>
+<p class="pagetext"><%= link_to "Sitemap", sitemap_path %></p>
