Updated site to support screenreaders

--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
 <div class="logo">DuelingPets.net</div>
 <div class="profilebar"><%= profile %></div>
 <br>
+<a class="skip-main" href="#main">Skip to main content</a>
 <div class="navbox">
    <div class="navigation">
       <div class="navigationspacing"><%= link_to "Home", root_path %></div>
@@ -25,7 +26,6 @@
       <% end %>
       <div class="navigationspacing"><%= link_to "Stories", sbooks_path %></div>
       <div class="navigationspacing"><%= link_to "Gallery", mainfolders_path %></div>
-      <div class="navigationspacing"><%= link_to "Radically awesome features" %></div>
    </div>
 </div>
 <%= timeleft %>
