--- a/Trial/app/views/pets/index.html.erb
+++ b/Trial/app/views/pets/index.html.erb
@@ -5,7 +5,7 @@
 <br>
 <p class="pagetext">Need a pet? Then head over to our pet adoption page where we have many pets for users to chose from. Some of the pets here at the pet adoption will be created by yours truly the lovely founder of this site, *applause*  thank you, thank you, you are all too kind! However, I am not the only one, other pets will be created by the actual users, so this is not your typical buy a pet that only the admins create, no, no, no, you the users get to step inside the creativity seat and show us all what makes you a good artist! So to the buyers, please be sure to thank the lovely creators of these pets and appreciate their great creativity.</p>
 <br>
-<p class="pagetext">Now to some of you that submited a pet you might be wondering where it went and why it is not showing up at the adoption center. Those submited pets are placed under review and could take up to a week to be approved so be patient. Also please ensure that any pet created image has the extension lowercased only such as .png, .jpeg, .jpg, .etc for it to be displayed correctly.</p>
+<p id="main" tabindex="-1" class="pagetext">Now to some of you that submited a pet you might be wondering where it went and why it is not showing up at the adoption center. Those submited pets are placed under review and could take up to a week to be approved so be patient. Also please ensure that any pet created image has the extension lowercased only such as .png, .jpeg, .jpg, .etc for it to be displayed correctly.</p>
 <br>
 <pre class="pagetext">HP = Pet's Health Points or Life   ATK = Pet's Attack   DEF = Pet's Defense   SPD = Pet's Speed and Agility</pre>
 <br>
