--- a/Trial/app/views/forums/index.html.erb
+++ b/Trial/app/views/forums/index.html.erb
@@ -12,7 +12,7 @@
 <div class="pagebox"><%= paginate @forums %></div>
 <% @forums.each do |forum| %>
    <br>
-   <p class="pagetext"><%= link_to forum.name, user_forum_path(forum.user.vname, forum) %></p>
+   <p id="main" tabindex="-1" class="pagetext"><%= link_to forum.name, user_forum_path(forum.user.vname, forum) %></p>
    <p class="pagetext"><%= forum.description %></p>
    <% if !getOptional %>
       <p class="pagetext"><%= getType(forum.user) %><%= link_to forum.user.vname, user_path(forum.user) %></p>
