--- a/Trial/app/views/items/index.html.erb
+++ b/Trial/app/views/items/index.html.erb
@@ -3,7 +3,7 @@
 <% provide(:description, "Where users go to purchase items for their pet.") %>
 <h1 class="pageheader">Zeriach's Item Shop</h1>
 <br>
-<p class="pagetext">Welcome to my shop of weird and wonderful things, can I interest you in a particular item?</p>
+<p id="main" tabindex="-1" class="pagetext">Welcome to my shop of weird and wonderful things, can I interest you in a particular item?</p>
 <br>
 <div class="pagebox"><%= paginate @items %></div>
 <br>
