--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -1,11 +1,14 @@
+<div class="skip">
+   <a class="skip" href="#main">Skip to main content</a>
+   <a class="skip" href="#navigationbox">Skip to navigation</a>
+</div>
 <div class="backgroundbox"><%= image_tag("/banner/duelingpetsbanner.jpeg", class: "banner") %></div>
-<div class="logo">DuelingPets.net</div>
+<div class="logo"><%= link_to "DuelingPets.net", root_path %></div>
 <div class="profilebar"><%= profile %></div>
 <br>
-<a class="skip-main" href="#main">Skip to main content</a>
 <div class="navbox">
-   <div class="navigation">
-      <div class="navigationspacing"><%= link_to "Home", root_path %></div>
+   <div id="navigationbox" class="navigation">
+      <!--Creativity and Community -->
       <div class="navigationspacing"><%= link_to "Adopt a Pet", pets_path %></div><!--Works great for guest at 80% font -->
       <% if !current_user %>
          <div class="navigationspacing"><%= link_to "Forgot Password", recover_path %></div>
