Fixed header to go cookieless

--- a/Trial/app/views/layouts/_header.html.erb
+++ b/Trial/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
    <a class="skip" href="#main">Skip to main content</a>
    <a class="skip" href="#navigationbox">Skip to navigation</a>
 </div>
-<div class="backgroundbox"><%= image_tag("/banner/duelingpetsbanner.jpeg", class: "banner") %></div>
+<div class="backgroundbox"><%= image_tag("http://static.duelingpets.net/banner/duelingpetsbanner.jpeg", class: "banner") %></div>
 <div class="logo"><%= link_to "DuelingPets.net", root_path %></div>
 <div class="profilebar"><%= profile %></div>
 <br>
