Updated the homepage to go cookieless

--- a/Trial/app/views/start/home.html.erb
+++ b/Trial/app/views/start/home.html.erb
@@ -36,6 +36,6 @@
    <!--End indent-->
 <% end %>
 <br>
-<div class="mascotbox"><%= image_tag("/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
+<div class="mascotbox"><%= image_tag("http://static.duelingpets.net/mascot/duelingpetsmascotbattirothebat.jpeg", class: "mascot") %></div>
 <br>
 <p class="pagetext"><%= link_to "Sitemap", sitemap_path %></p>
