--- a/Trial/app/views/layouts/application.html.erb
+++ b/Trial/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
       <meta name="keywords" content="<%= yield(:keywords) %>">
       <meta name="description" content="<%= yield(:description) %>">
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <%= stylesheet_link_tag    "application", :media => "all" %>
+      <%= stylesheet_link_tag    "http://static.duelingpets.net/assets/application", :media => "all" %>
       <%= csrf_meta_tags %>
    </head>
    <body class="pagecontent">
